--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -7,9 +7,9 @@
             android:icon="@drawable/ic_menu_camera"
             android:title="Plan" />
         <item
-            android:id="@+id/nav_gallery"
+            android:id="@+id/nav_learning_record"
             android:icon="@drawable/ic_menu_gallery"
-            android:title="History" />
+            android:title="record" />
         <item
             android:id="@+id/nav_slideshow"
             android:icon="@drawable/ic_menu_slideshow"
