--- a/app/src/main/res/layout/ready_to_learn_cardview.xml
+++ b/app/src/main/res/layout/ready_to_learn_cardview.xml
@@ -1,17 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<android.support.v7.widget.CardView
-    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+<android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tool="http://schemas.android.com/tools"
     android:id="@+id/cdv_readyToLearnWord"
     android:layout_width="match_parent"
     android:layout_height="50dp"
     card_view:cardCornerRadius="4dp">
-
-        <TextView
-            android:id="@+id/txv_readyToLearnWord"
-            android:paddingTop="5dp"
-            android:paddingLeft="10dp"
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent">
+            <TextView
+                android:id="@+id/txv_readyToLearnWord"
+                android:paddingTop="5dp"
+                android:paddingLeft="10dp"
+                android:layout_centerVertical="true"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                tool:text="word"/>
+            <TextView
+                android:id="@+id/txv_readyToLearnMean"
+
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                tool:text="mean"
+                android:layout_alignBottom="@+id/txv_readyToLearnWord"
+                android:layout_centerHorizontal="true" />
+        </RelativeLayout>
+
     </android.support.v7.widget.CardView>
