--- a/app/src/main/res/layout/learn_english_card_content.xml
+++ b/app/src/main/res/layout/learn_english_card_content.xml
@@ -7,44 +7,62 @@
     card_view:cardCornerRadius="6dp"
     card_view:cardElevation="10dp">
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:minHeight="200dp"
-        android:orientation="vertical"
-        >
+        android:layout_height="match_parent">
 
-        <TextView
-            android:id="@+id/txv_learnEnglishNumber"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            tools:text="1" />
-        <TextView
-            android:id="@+id/txv_learnEnglishWord"
-            android:layout_width="300dp"
-            android:layout_height="wrap_content"
-            tools:text="word" />
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="释义"
-            android:id="@+id/textView2" />
-        <TextView
-            android:id="@+id/txv_learnEnglishMean"
-            android:layout_width="300dp"
-            android:layout_height="wrap_content"
-            tools:text="mean"
-           />
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="例句"
-            android:id="@+id/textView3" />
-        <TextView
-            android:id="@+id/txv_learnEnglishExample"
-            android:layout_width="150dp"
-            android:layout_height="100dp"
-            android:layout_gravity="center"
-            tools:text="example" />
-    </LinearLayout>
+            android:minHeight="200dp"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/txv_learnEnglishNumber"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                tools:text="1" />
+
+            <TextView
+                android:id="@+id/txv_learnEnglishWord"
+                android:layout_width="300dp"
+                android:layout_height="wrap_content"
+                tools:text="word" />
+
+            <TextView
+                android:id="@+id/textView2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="释义" />
+
+            <TextView
+                android:id="@+id/txv_learnEnglishMean"
+                android:layout_width="300dp"
+                android:layout_height="wrap_content"
+                tools:text="mean" />
+
+            <TextView
+                android:id="@+id/textView3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="例句" />
+
+            <TextView
+                android:id="@+id/txv_learnEnglishExample"
+                android:layout_width="150dp"
+                android:layout_height="100dp"
+                android:layout_gravity="center"
+                tools:text="example" />
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+
+
+            </RelativeLayout>
+
+        </LinearLayout>
+
+    </RelativeLayout>
 </android.support.v7.widget.CardView>
