--- a/app/src/main/res/layout/cardview_record.xml
+++ b/app/src/main/res/layout/cardview_record.xml
@@ -65,7 +65,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="单词数"
+                    android:text="重点"
                     android:textSize="20sp" />
 
                 <TextView
@@ -84,7 +84,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="单词数"
+                    android:text="困难"
                     android:textSize="20sp" />
 
                 <TextView
