--- a/app/src/main/res/layout/activity_learn_english.xml
+++ b/app/src/main/res/layout/activity_learn_english.xml
@@ -11,7 +11,7 @@
 <TextView
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:text="ABC"
+    android:text="学习"
     android:textSize="30dp"
     android:id="@+id/txv_learnEnglishTitle"
     android:layout_alignParentTop="true"
