--- a/app/src/main/res/layout/activity_start_animation.xml
+++ b/app/src/main/res/layout/activity_start_animation.xml
@@ -8,5 +8,10 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.jiai.sun.appforenglist.Activity.StartAnimationActivity">
+<ImageView
 
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:src="@drawable/donghuaziti"
+/>
 </RelativeLayout>
