--- a/app/src/main/res/layout/learn_english_card_content.xml
+++ b/app/src/main/res/layout/learn_english_card_content.xml
@@ -16,50 +16,62 @@
             android:layout_height="wrap_content"
             android:minHeight="200dp"
             android:orientation="vertical">
+<LinearLayout
+    android:paddingLeft="25dp"
+    android:layout_width="wrap_content"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+    <TextView
+        android:id="@+id/txv_learnEnglishNumber"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        tools:text="1" />
 
-            <TextView
-                android:id="@+id/txv_learnEnglishNumber"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                tools:text="1" />
+    <TextView
+        android:id="@+id/txv_learnEnglishWord"
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:textSize="25sp"
+        tools:text="word" />
 
-            <TextView
-                android:id="@+id/txv_learnEnglishWord"
-                android:layout_width="300dp"
-                android:layout_height="wrap_content"
-                tools:text="word" />
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="释义" />
 
-            <TextView
-                android:id="@+id/textView2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="释义" />
+    <TextView
+        android:id="@+id/txv_learnEnglishMean"
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:textSize="20sp"
+        tools:text="mean" />
 
-            <TextView
-                android:id="@+id/txv_learnEnglishMean"
-                android:layout_width="300dp"
-                android:layout_height="wrap_content"
-                tools:text="mean" />
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="例句" />
+</LinearLayout>
 
-            <TextView
-                android:id="@+id/textView3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="例句" />
 
             <TextView
                 android:id="@+id/txv_learnEnglishExample"
-                android:layout_width="150dp"
-                android:layout_height="100dp"
+                android:layout_width="200dp"
+                android:layout_height="250dp"
                 android:layout_gravity="center"
                 tools:text="example" />
 
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
+            <ImageButton
 
-
-
+                android:layout_width="54dp"
+                android:layout_height="44dp"
+                android:background="@drawable/xinxinkong"
+                android:layout_alignParentTop="true"
+                android:layout_centerHorizontal="true" />
             </RelativeLayout>
 
         </LinearLayout>
