--- a/app/src/main/res/layout/review_content.xml
+++ b/app/src/main/res/layout/review_content.xml
@@ -19,6 +19,7 @@
         android:layout_marginTop="80dp">
 
         <TextView
+            android:id="@+id/txv_review_title"
             android:text="age"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -49,12 +50,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
 
-                <Button
-                    android:background="@color/abcd"
-                    android:id="@+id/btn_A"
-                    android:text="n.下午"
-                    android:layout_width="150dp"
-                    android:layout_height="wrap_content" />
+
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
