简单的测试

--- a/app/src/main/res/layout/review_content.xml
+++ b/app/src/main/res/layout/review_content.xml
@@ -53,7 +53,6 @@
                 <Button
                     android:background="@color/abcd"
                     android:id="@+id/btn_A"
-                    android:text="n.年龄"
                     android:layout_width="150dp"
                     android:layout_height="wrap_content"
                     android:onClick="checking"/>
@@ -64,7 +63,6 @@
                 <Button
                     android:background="@color/abcd"
                     android:id="@+id/btn_B"
-                    android:text="n.年龄"
                     android:layout_width="150dp"
                     android:layout_height="wrap_content"
                     android:onClick="checking"/>
@@ -83,7 +81,6 @@
                 <Button
                     android:background="@color/abcd"
                     android:id="@+id/btn_C"
-                    android:text="n.意外的"
                     android:layout_width="150dp"
                     android:layout_height="wrap_content"
                     android:onClick="checking"/>
@@ -94,7 +91,6 @@
                 <Button
                     android:background="@color/abcd"
                     android:id="@+id/btn_D"
-                    android:text="vt.使一致"
                     android:layout_width="150dp"
                     android:layout_height="wrap_content"
                     android:onClick="checking"/>
@@ -108,5 +104,6 @@
         android:layout_height="wrap_content"
         android:text="下一个"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:onClick="next"/>
 </RelativeLayout>
