--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -34,27 +34,29 @@
                 android:layout_alignParentTop="true"
                 android:layout_alignParentRight="true"
                 android:layout_alignParentEnd="true">
-                <CheckBox
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
-                <TextView
+                <RadioGroup
+                    android:id="@+id/rg"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="10"/>
-                <CheckBox
+                    android:orientation="horizontal">
+                <RadioButton
+                    android:id="@+id/rb_5"
+                    android:text="5"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="20"/>
-                <CheckBox
+
+                <RadioButton
+                    android:id="@+id/rb_10"
+                    android:text="10"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
-                <TextView
+
+                <RadioButton
+                    android:id="@+id/rb_20"
+                    android:text="20"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="40"/>
+                    android:layout_height="wrap_content" />
+                </RadioGroup>
             </LinearLayout>
         </RelativeLayout>
 
@@ -75,7 +77,8 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentTop="true"
                 android:layout_alignParentRight="true"
-                android:layout_alignParentEnd="true" />
+                android:layout_alignParentEnd="true"
+                android:onClick="setWordsLibrary"/>
         </RelativeLayout>
 
     </LinearLayout>
