--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -29,13 +29,14 @@
                 android:textSize="20sp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/txv_learn_main"
+
                 android:text="已学单词:  "/>
             <TextView
+                android:id="@+id/txt_courntLearn"
                 android:textSize="30sp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="20."/>
+               />
         </LinearLayout>
         <LinearLayout
             android:layout_weight="1"
@@ -53,7 +54,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/txv_hasMaster_main"
-                android:text="20."/>
+               />
         </LinearLayout>
 
     </LinearLayout>
@@ -72,7 +73,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
             <TextView
-                android:text="5%"
+                android:id="@+id/txv_finish"
                 android:textSize="80dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
