--- a/app/src/main/res/layout/activity_words_library.xml
+++ b/app/src/main/res/layout/activity_words_library.xml
@@ -9,6 +9,8 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.jiai.sun.appforenglist.Activity.WordsLibraryActivity">
 <Button
+    android:id="@+id/btn_selectWordsLibrary"
+    android:visibility="invisible"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:text="词库选择"
