--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -5,7 +5,7 @@
         <item
             android:id="@+id/nav_home"
             android:icon="@drawable/ic_menu_camera"
-            android:title="主页" />
+            android:title="学习" />
         <item
             android:id="@+id/nav_learning_record"
             android:icon="@drawable/ic_menu_gallery"
